@@ -1,4 +1,15 @@
 
+Изменения в nginx 1.13.11                                         03.04.2018
+
+    *) Добавление: параметр proxy_protocol директивы listen теперь
+       поддерживает протокол PROXY версии 2.
+
+    *) Исправление: nginx не собирался с OpenSSL 1.1.1 статически на Linux.
+
+    *) Исправление: в параметрах http_404, http_500 и им подобных директивы
+       proxy_next_upstream.
+
+
 Изменения в nginx 1.13.10                                         20.03.2018
 
     *) Добавление: теперь параметр set в SSI-директиве include позволяет
