@@ -17,4 +17,5 @@ END
     CORE_DEPS="$CORE_DEPS $THREAD_POOL_DEPS"
     CORE_SRCS="$CORE_SRCS $THREAD_POOL_SRCS"
     CORE_LIBS="$CORE_LIBS -lpthread"
+    NGX_LIBPTHREAD="-lpthread"
 fi
