@@ -9,6 +9,41 @@
 #include <ngx_core.h>
 
 
+#define NGX_PROXY_PROTOCOL_AF_INET          1
+#define NGX_PROXY_PROTOCOL_AF_INET6         2
+
+
+#define ngx_proxy_protocol_parse_uint16(p)  ((p)[0] << 8 | (p)[1])
+
+
+typedef struct {
+    u_char                                  signature[12];
+    u_char                                  version_command;
+    u_char                                  family_transport;
+    u_char                                  len[2];
+} ngx_proxy_protocol_header_t;
+
+
+typedef struct {
+    u_char                                  src_addr[4];
+    u_char                                  dst_addr[4];
+    u_char                                  src_port[2];
+    u_char                                  dst_port[2];
+} ngx_proxy_protocol_inet_addrs_t;
+
+
+typedef struct {
+    u_char                                  src_addr[16];
+    u_char                                  dst_addr[16];
+    u_char                                  src_port[2];
+    u_char                                  dst_port[2];
+} ngx_proxy_protocol_inet6_addrs_t;
+
+
+static u_char *ngx_proxy_protocol_v2_read(ngx_connection_t *c, u_char *buf,
+    u_char *last);
+
+
 u_char *
 ngx_proxy_protocol_read(ngx_connection_t *c, u_char *buf, u_char *last)
 {
@@ -16,8 +51,16 @@ ngx_proxy_protocol_read(ngx_connection_t *c, u_char *buf, u_char *last)
     u_char     ch, *p, *addr, *port;
     ngx_int_t  n;
 
+    static const u_char signature[] = "\r\n\r\n\0\r\nQUIT\n";
+
     p = buf;
     len = last - buf;
+
+    if (len >= sizeof(ngx_proxy_protocol_header_t)
+        && memcmp(p, signature, sizeof(signature) - 1) == 0)
+    {
+        return ngx_proxy_protocol_v2_read(c, buf, last);
+    }
 
     if (len < 8 || ngx_strncmp(p, "PROXY ", 6) != 0) {
         goto invalid;
@@ -105,7 +148,8 @@ ngx_proxy_protocol_read(ngx_connection_t *c, u_char *buf, u_char *last)
     c->proxy_protocol_port = (in_port_t) n;
 
     ngx_log_debug2(NGX_LOG_DEBUG_CORE, c->log, 0,
-                   "PROXY protocol address: %V %i", &c->proxy_protocol_addr, n);
+                   "PROXY protocol address: %V %d", &c->proxy_protocol_addr,
+                   c->proxy_protocol_port);
 
 skip:
 
@@ -165,4 +209,135 @@ ngx_proxy_protocol_write(ngx_connection_t *c, u_char *buf, u_char *last)
     lport = ngx_inet_get_port(c->local_sockaddr);
 
     return ngx_slprintf(buf, last, " %ui %ui" CRLF, port, lport);
+}
+
+
+static u_char *
+ngx_proxy_protocol_v2_read(ngx_connection_t *c, u_char *buf, u_char *last)
+{
+    u_char                             *end;
+    size_t                              len;
+    socklen_t                           socklen;
+    ngx_uint_t                          version, command, family, transport;
+    ngx_sockaddr_t                      sockaddr;
+    ngx_proxy_protocol_header_t        *header;
+    ngx_proxy_protocol_inet_addrs_t    *in;
+#if (NGX_HAVE_INET6)
+    ngx_proxy_protocol_inet6_addrs_t   *in6;
+#endif
+
+    header = (ngx_proxy_protocol_header_t *) buf;
+
+    buf += sizeof(ngx_proxy_protocol_header_t);
+
+    version = header->version_command >> 4;
+
+    if (version != 2) {
+        ngx_log_error(NGX_LOG_ERR, c->log, 0,
+                      "unknown PROXY protocol version: %ui", version);
+        return NULL;
+    }
+
+    len = ngx_proxy_protocol_parse_uint16(header->len);
+
+    if ((size_t) (last - buf) < len) {
+        ngx_log_error(NGX_LOG_ERR, c->log, 0, "header is too large");
+        return NULL;
+    }
+
+    end = buf + len;
+
+    command = header->version_command & 0x0f;
+
+    /* only PROXY is supported */
+    if (command != 1) {
+        ngx_log_debug1(NGX_LOG_DEBUG_CORE, c->log, 0,
+                       "PROXY protocol v2 unsupported command %ui", command);
+        return end;
+    }
+
+    transport = header->family_transport & 0x0f;
+
+    /* only STREAM is supported */
+    if (transport != 1) {
+        ngx_log_debug1(NGX_LOG_DEBUG_CORE, c->log, 0,
+                       "PROXY protocol v2 unsupported transport %ui",
+                       transport);
+        return end;
+    }
+
+    family = header->family_transport >> 4;
+
+    switch (family) {
+
+    case NGX_PROXY_PROTOCOL_AF_INET:
+
+        if ((size_t) (end - buf) < sizeof(ngx_proxy_protocol_inet_addrs_t)) {
+            return NULL;
+        }
+
+        in = (ngx_proxy_protocol_inet_addrs_t *) buf;
+
+        sockaddr.sockaddr_in.sin_family = AF_INET;
+        sockaddr.sockaddr_in.sin_port = 0;
+        memcpy(&sockaddr.sockaddr_in.sin_addr, in->src_addr, 4);
+
+        c->proxy_protocol_port = ngx_proxy_protocol_parse_uint16(in->src_port);
+
+        socklen = sizeof(struct sockaddr_in);
+
+        buf += sizeof(ngx_proxy_protocol_inet_addrs_t);
+
+        break;
+
+#if (NGX_HAVE_INET6)
+
+    case NGX_PROXY_PROTOCOL_AF_INET6:
+
+        if ((size_t) (end - buf) < sizeof(ngx_proxy_protocol_inet6_addrs_t)) {
+            return NULL;
+        }
+
+        in6 = (ngx_proxy_protocol_inet6_addrs_t *) buf;
+
+        sockaddr.sockaddr_in6.sin6_family = AF_INET6;
+        sockaddr.sockaddr_in6.sin6_port = 0;
+        memcpy(&sockaddr.sockaddr_in6.sin6_addr, in6->src_addr, 16);
+
+        c->proxy_protocol_port = ngx_proxy_protocol_parse_uint16(in6->src_port);
+
+        socklen = sizeof(struct sockaddr_in6);
+
+        buf += sizeof(ngx_proxy_protocol_inet6_addrs_t);
+
+        break;
+
+#endif
+
+    default:
+        ngx_log_debug1(NGX_LOG_DEBUG_CORE, c->log, 0,
+                       "PROXY protocol v2 unsupported address family %ui",
+                       family);
+        return end;
+    }
+
+    c->proxy_protocol_addr.data = ngx_pnalloc(c->pool, NGX_SOCKADDR_STRLEN);
+    if (c->proxy_protocol_addr.data == NULL) {
+        return NULL;
+    }
+
+    c->proxy_protocol_addr.len = ngx_sock_ntop(&sockaddr.sockaddr, socklen,
+                                               c->proxy_protocol_addr.data,
+                                               NGX_SOCKADDR_STRLEN, 0);
+
+    ngx_log_debug2(NGX_LOG_DEBUG_CORE, c->log, 0,
+                   "PROXY protocol v2 address: %V %d", &c->proxy_protocol_addr,
+                   c->proxy_protocol_port);
+
+    if (buf < end) {
+        ngx_log_debug1(NGX_LOG_DEBUG_CORE, c->log, 0,
+                       "PROXY protocol v2 %z bytes of tlv ignored", end - buf);
+    }
+
+    return end;
 }
